- Date:
  . Fixed bug #80047 (DatePeriod doesn't warn with custom DateTimeImmutable).
    (Derick)

- FPM:
  . Fixed zlog message prepend, free on incorrect address. (Heiko Weber)

- GD:
  . Fixed bug GH-8848 (imagecopyresized() error refers to the wrong argument).
    (cmb)

- OPcache:
  . Fixed bug GH-8847 (PHP hanging infinitly at 100% cpu when check php
    syntaxe of a valid file). (Dmitry)

07 Jul 2022, PHP 8.0.21

- Core:
  . Fixed potential use after free in php_binary_init(). (Heiko Weber)

- CLI:
  . Fixed GH-8827 (Intentionally closing std handles no longer possible). (cmb)

- COM:
  . Fixed bug GH-8778 (Integer arithmethic with large number variants fails).
    (cmb)

- Curl:
  . Fixed CURLOPT_TLSAUTH_TYPE is not treated as a string option. (Pierrick)

- Date:
  . Fixed bug #74671 (DST timezone abbreviation has incorrect offset). (Derick)
  . Fixed bug #77243 (Weekdays are calculated incorrectly for negative years).
    (Derick)
  . Fixed bug #78139 (timezone_open accepts invalid timezone string argument).
    (Derick)

- FPM:
  . Fixed bug #67764 (fpm: syslog.ident don't work). (Jakub Zelenka)

- MBString:
  . Fixed bug GH-8685 (pcre not ready at mbstring startup). (Remi)

- ODBC:
  . Fixed handling of single-key connection strings. (Calvin Buckley)

- OpenSSL:
  . Fixed bug #50293 (Several openssl functions ignore the VCWD).
    (Jakub Zelenka, cmb)
  . Fixed bug #81713 (NULL byte injection in several OpenSSL functions working
    with certificates). (Jakub Zelenka)

- PDO_ODBC:
  . Fixed errorInfo() result on successful PDOStatement->execute(). (Yurunsoft)
  . Fixed handling of single-key connection strings. (Calvin Buckley)

- SPL:
  . Fixed bug GH-8563 (Different results for seek() on SplFileObject and SplTempFileObject). (Girgias)

- Zip:
  . Fixed bug GH-8781 (ZipArchive::close deletes zip file without updating stat
    cache). (Remi)

09 Jun 2022, PHP 8.0.20

- CLI:
  . Fixed bug GH-8575 (CLI closes standard streams too early). (Levi Morrison)
