@@ -17,6 +17,9 @@ PHP                                                                        NEWS
   . Fixed bug GH-8847 (PHP hanging infinitly at 100% cpu when check php
     syntaxe of a valid file). (Dmitry)
 
+- Standard:
+  . Fixed the crypt_sha256/512 api build with clang > 12. (David Carier)
+
 07 Jul 2022, PHP 8.0.21
 
 - Core:
